--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
   ],
   "require": {
     "php": ">=7.1",
+    "fond-of-spryker/shipment-table-rate-data-import": "^1.0.0",
+    "spryker/kernel": "^3.0.0",
     "spryker/shipment": "^6.5.0"
   },
   "require-dev": {
