change in the composer.json the versions for the required dependencies

--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
   ],
   "require": {
     "php": ">=7.1",
-    "fond-of-spryker/shipment-table-rate-data-import": "^1.0.0",
-    "spryker/kernel": "^3.0.0",
-    "spryker/shipment": "^6.5.0"
+    "fond-of-spryker/shipment-table-rate-data-import": "~2.0.0",
+    "spryker/kernel": "~3.0.0",
+    "spryker/shipment": "~6.5.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "^0.11",
