--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,8 @@
   ],
   "require": {
     "php": ">=7.1",
-    "fond-of-spryker/shipment-table-rate-data-import": "~2.0.1",
-    "spryker/kernel": "~3.27.0",
-    "spryker/shipment": "~6.6.0"
+    "spryker/kernel": "^3.27.0",
+    "spryker/shipment": "^6.6.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "^0.11",
