--- a/composer.json
+++ b/composer.json
@@ -23,16 +23,16 @@
   "require": {
     "php": ">=7.1",
     "fond-of-spryker/shipment-table-rate-data-import": "~2.0.1",
-    "spryker/kernel": "~3.27.0",
-    "spryker/shipment": "~6.6.0"
+    "spryker/kernel": "^3.37.5",
+    "spryker/shipment": "^6.10.0"
   },
   "require-dev": {
-    "spryker/code-sniffer": "^0.11",
-    "spryker/development": "^3.6",
-    "codeception/codeception": "^2.3",
+    "spryker/code-sniffer": "^0.14.7",
+    "spryker/development": "^3.22",
+    "codeception/codeception": "^2.5",
     "mikey179/vfsStream": "^1.6",
     "phpro/grumphp": "^0.14",
-    "sebastian/phpcpd": "^4.0"
+    "sebastian/phpcpd": "^4.1"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
