Preparation Spryker Update

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   ],
   "require": {
     "php": ">=7.1",
-    "fond-of-spryker/shipment-table-rate-data-import": "~2.0.1",
+    "fond-of-spryker/shipment-table-rate-data-import": "dev-spryker_upgrade",
     "spryker/kernel": "^3.37.5",
     "spryker/shipment": "^6.10.0"
   },
