--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,12 @@
     "spryker/shipment": "^6.6.0"
   },
   "require-dev": {
-    "spryker/code-sniffer": "^0.11",
-    "spryker/development": "^3.6",
-    "codeception/codeception": "^2.3",
-    "mikey179/vfsstream": "^1.6",
+    "spryker/code-sniffer": "^0.12",
+    "codeception/codeception": "^2.4",
     "phpro/grumphp": "^0.14",
-    "sebastian/phpcpd": "^4.0"
+    "sebastian/phpcpd": "^4.0",
+    "php-coveralls/php-coveralls": "^2.1",
+    "fond-of-codeception/spryker": "dev-master"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -43,7 +43,7 @@
   "autoload-dev": {
     "psr-4": {
       "FondOfSpryker\\": "tests/FondOfSpryker/",
-      "Generated\\": "tests/Generated/"
+      "Generated\\": "src/Generated/"
     }
   }
 }
