--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,10 @@
   ],
   "require": {
     "php": ">=7.1",
+    "spryker/country": "^3.1.0",
     "spryker/shipment": "^6.0.0 || ^7.0.0 || ^8.0.0",
-    "spryker/shipment-extension": "^1.0.0"
+    "spryker/shipment-extension": "^1.0.0",
+    "spryker/store": "^1.2.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "^0.12",
