--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "phpro/grumphp": "^0.14",
     "sebastian/phpcpd": "^4.0",
     "php-coveralls/php-coveralls": "^2.1",
-    "fond-of-codeception/spryker": "dev-master"
+    "fond-of-codeception/spryker": "^1.0"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
